[package]
name = "mandelbrot_py"
version = "0.1.0"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
edition = "2018"

[features]
parallel = [ "crossbeam", "num_cpus" ]

[dependencies]
crossbeam = { version = "0.7.3", optional = true }
num_cpus = { version = "1.13.0", optional = true }
image = "0.23.6"
structopt = "0.3.15"
num = "0.3.0"
