[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
edition = "2018"

[lib]
name = "mandelbrot"
crate-type = ["cdylib"]

[features]
py = [ "pyo3" ]

[dependencies]
gumdrop = "0.8"
image = { version = "0.23", default_features = false, features = ["png"]}
num = "0.3"

[dependencies.pyo3]
version= "0.11"
features = ["extension-module", "num-complex"]
optional = true
