[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
edition = "2018"

[dependencies]
crossbeam = "0.7"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
num = "0.2"
num_cpus = "1"
structopt = "0.3"

[features]
default = ["parallel"]
parallel = []
