[package]
name = "trump-o-meter"
version = "0.1.0"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
